[project]
name = "datapipelines"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.1.0",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "pgcli>=4.4.0",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.45",
    "tqdm>=4.67.1",
]
